--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
-    "id": "autofit-tabs",
-    "name": "Autofit Tabs",
-    "version": "1.0.0",
-    "minAppVersion": "0.15.0",
-    "description": "Automatically adjusts tab header widths in real-time to perfectly fit each tab's title content while maintaining a clean, seamless interface that prevents awkward text truncation and ensures optimal readability of your document titles.",
-    "author": "Bradley Wyatt",
-    "authorUrl": "https://github.com/bwya77",
-    "fundingUrl": {
+	"id": "inline-checkbox-groups",
+	"name": "Inline Checkbox Groups",
+	"version": "1.0.0",
+	"minAppVersion": "0.15.0",
+	"description": "Create multiple checkboxes on a single line, separated by a customizable separator character (default '|'), with the option to automatically cross out text when all checkboxes in the line are checked.",
+	"author": "Bradley Wyatt",
+	"authorUrl": "https://obsidian.md",
+	"fundingUrl": {
 		"Buy Me a Coffee": "buymeacoffee.com/bwya77",
 		"GitHub Sponsor":  "https://github.com/sponsors/bwya77"
   	},
-    "isDesktopOnly": true
+	"isDesktopOnly": true
 }
